@@ -1,46 +1,29 @@
 #' R6 class \code{RDML} -- contains methods to read and overview fluorescence 
-#' data from RDML v1.1 format files
+#' data from RDML v1.1 and v1.2 format files
 #' 
-#' Main purpose of this class is to work with RDML format 
-#' data (Lefever et al. 2009) and transform it to the appropriate format
-#' of the \code{qpcR} (Ritz et al. 2008, Spiess et al. 2008) and \code{chipPCR} 
-#' packages (see \link{new.RDML} for import and \link{RDML.Save} for export details). Real-time PCR Data Markup 
-#' Language (RDML) is the recommended file format element in the Minimum 
-#' Information for Publication of Quantitative Real-Time PCR Experiments (MIQE) 
-#' guidelines (Bustin et al. 2009). After importing Fluorescence data it can be viewed as \code{data.frame} which contains \code{vectors} of 
-#' fluroscence values filtered by experiment method (qPCR or melting), targets 
-#' (genes or dyes names), types (i.e. 'negative', 'unknown'), tube positions on 
-#' plate, samples names or fluorescence data \code{vector} names (see 
-#' \link{GetFData}). Also imported data can be overviewed by \code{summary} and 
-#' \code{plot} \code{S3} functions (see \link{summary.RDML} and 
-#' \link{plot.RDML}).
+#' Main purpose of this class is to work with RDML format data (Lefever et al. 
+#' 2009) and transform it to the appropriate format of the \code{qpcR} (Ritz et 
+#' al. 2008, Spiess et al. 2008) and \code{chipPCR} packages (see 
+#' \link{new.RDML} for import and \link{RDML.Save} for export details). 
+#' Real-time PCR Data Markup Language (RDML) is the recommended file format 
+#' element in the Minimum Information for Publication of Quantitative Real-Time 
+#' PCR Experiments (MIQE) guidelines (Bustin et al. 2009). After importing all 
+#' data contained at RDML file can be accessed (getted or setted) by 
+#' \code{fields}. Inner structure of imported data mimics structure of RDML file
+#' v1.2. Also data can be represented as \code{data.frame} by method 
+#' \code{AsTable}. Such variant of data representation allows easy samples 
+#' filtering (by targets, types, etc.) and serves as request for \code{GetFData}
+#' method -- gets fluorescence data for specified samples.
 #' 
-#' Names of the fluorescence data \code{vectors} can be generated by rules 
-#' described in \code{name.pattern}. For example, if \code{name.pattern} = 
-#' \code{"\%NAME\%__\%TUBE\%"}, sample name (inputted in the PCR software) is 
-#' "Sample_1", and position on the plate is "A4", then generated fluorescence 
-#' data name will be: "Sample_1__A4".
 #' 
-#' Possible keys in \code{name.pattern} \describe{ \item{\code{\%NAME\%}}{name 
-#' of the sample inputted in the qPCR software (ex.: "Sample 1")} 
-#' \item{\code{\%ID\%}}{tube ID (ex.: "23")} \item{\code{\%TUBE\%}}{tube name 
-#' (ex.: "B11")} \item{\code{\%TARGET\%}}{PCR target (ex.: "GAPDH")} 
-#' \item{\code{\%TYPE\%}}{type of the sample (ex.: "unkn")}  }
-#' 
-#' @section Fields: \describe{ \item{publisher}{name of PCR device manufacturer 
-#'   } \item{dilutions}{\code{list} of dillutions with their positions at plate 
-#'   splitted by targets } \item{plate.dims}{plate dimensions -- number of rows 
-#'   and columns at plate} \item{used.methods}{methods used at experiment -- 
-#'   'qPCR' and/or 'melt'} \item{targets}{targets (genes or dyes names) used by 
-#'   experiment} \item{types}{ \code{list} of samples types splitted by targets}
-#'   \item{name.pattern}{ name pattern to generate fluorescence data vectors 
-#'   names (see 'Details') } }
+#' @section Fields: Type, structure of data and description of fields can be 
+#'   viewed at RDML v1.2 file description. Names of fields are first level of 
+#'   XML tree. All setters for fields contain data validators (asserts). Thus 
+#'   invalid data can not be setted. }
 #' @section Methods: \describe{\item{new}{creates new instance of \code{RDML} 
-#'   class object (see \link{RDML.new})} \item{GetFData}{gets fluorescence data 
-#'   vectors (see \link{RDML.GetFData})} \item{Plot}{plots \code{RDML} object
-#'   (see \link{RDML.Plot})} \item{Summarize}{creates summary for \code{RDML}
-#'   object (see \link{RDML.Summarize})} \item{Save}{saves \code{RDML} object as RDML v1.2 format file
-#'   (see \link{RDML.Save})}}
+#'   class object (see \link{RDML.new})} \item{AsTable}{represent RDML data as
+#'   \code{data.frame} (see \link{RDML.AsTable})}\item{GetFData}{gets fluorescence
+#'   data (see \link{RDML.GetFData})}}
 #'   
 #' @author Konstantin A. Blagodatskikh <k.blag@@yandex.ru>, Stefan Roediger 
 #'   <stefan.roediger@@hs-lausitz.de>, Michal Burdukiewicz 
@@ -191,12 +174,7 @@ RDML <- R6Class("RDML",
                 public = list(
                   ###               WARNING
                   ### All RDML functions are store at separate files!!!
-                  ### Empty functions are added to let roxygen work.
-                  ###
-                  ## initialize() - RDML.init.R
-                  ## GetFData() - RDML.GetFData.R
-                  ## Plot() - plot.RDML.R
-                  ## Summarize() - summary.RDML.R
+                  ### Empty functions are added to let roxygen work.                  
                   initialize = function() { },
                   GetFData = function() { },
                   AsTable = function() { }
@@ -626,25 +604,22 @@ RDML <- R6Class("RDML",
                         assert_that(is.opt.string(run$dataCollectionSoftware$version))
                         assert_that(is.opt.string(run$backgroundDeterminationMethod))
                         assert_that(is.opt.string(run$cqDetectionMethod))
-                        assert_that(is.opt.list(run$thermalCyclingConditions))
-                        for(tcc in run$thermalCyclingConditions) {
-                          assert_that(has.only.names(tcc,
-                                                     c("id")))
-                          assert_that(is.string(tcc$id))
-                        }
+                        assert_that(is.opt.string(run$thermalCyclingConditions))
                         assert_that(is.list(run$pcrFormat))
                         assert_that(is.count(run$pcrFormat$rows))
                         assert_that(is.count(run$pcrFormat$columns))
-                        assert_that(is.count(run$pcrFormat$rowLabel))
-                        assert_that(is.count(run$pcrFormat$columnLabel))
+                        assert_that(is.string(run$pcrFormat$rowLabel))
+                        assert_that(is.string(run$pcrFormat$columnLabel))
                         assert_that(is.opt.string(run$runDate))
                         assert_that(is.list(run$react))
                         for(react in run$react) {
                           assert_that(is.list(react))
                           assert_that(has.only.names(react,
-                                                     c("sample",                                                     
+                                                     c("id",
+                                                       "position",
+                                                       "sample",
                                                        "data")))
-                          assert_that(is.string(react$sample))
+                          assert_that(is.count(react$id))
                           assert_that(is.list(react$data))
                           for(data in react$data) {
                             assert_that(has.only.names(data,
@@ -657,7 +632,17 @@ RDML <- R6Class("RDML",
                                                          "bgFluor",
                                                          "bgFluorSlp",
                                                          "quantFluor")))
-                            assert_that(is.string(doc$id))
+                            assert_that(is.string(data$id))
+                            assert_that(is.opt.double(data$cq))
+                            assert_that(is.opt.string(data$excl))
+                            assert_that(is.opt.double.matrix(data$adp))                            
+                            # add colnames assert
+                            assert_that(is.opt.double.matrix(data$mdp))                            
+                            
+                            assert_that(is.opt.double(data$endPt))
+                            assert_that(is.opt.double(data$bgFluor))                            
+                            assert_that(is.opt.double(data$bgFluorSlp))
+                            assert_that(is.opt.double(data$quantFluor))
                           }
                           names(react$data) <- GetIds(react$data)
                         }
@@ -665,93 +650,9 @@ RDML <- R6Class("RDML",
                       }
                       names(exp$run) < GetIds(exp$run)                      
                     }
-                    names(new.experiments) < GetIds(new.experiments)
+                    names(new.experiments) < GetIds(new.experiments)                    
                     private$.experiment <- new.experiments
-                  },
-                  
-                  publisher = function(publisher) {
-                    if(missing(publisher))
-                      return(private$.publisher)
-                    private$.publisher <- publisher
-                  },
-                  
-                  
-                  dilutions = function(dilutions) {
-                    if(missing(dilutions))
-                      return(private$.dilutions)
-                    private$.dilutions <- dilutions
-                  },
-                  plate.dims = function(plate.dims) {
-                    if(missing(plate.dims))
-                      return(private$.plate.dims)
-                    private$.plate.dims <- plate.dims
-                  },
-                  used.methods = function(value) {
-                    if(missing(value)) {
-                      methods <- c()
-                      if(!(is.null(private$.qPCR.fdata))) 
-                        methods <- c(methods, "qPCR")                      
-                      if(!(is.null(private$.melt.fdata)))
-                        methods <- c(methods, "melt")
-                      return(methods)
-                    }
-                    stop("used.methods can't be setted directly!!!")
-                  },
-                  targets = function(targets.names) {
-                    if(missing(targets.names))
-                      return(as.vector(unique(private$.plate.map$Target)))
-                    levels(private$.plate.map$Target) <- targets.names
-                  },
-                  types = function(types.names) { 
-                    if(missing(types.names)) {
-                      targets <- as.vector(unique(private$.plate.map$Target))                    
-                      types <- lapply(targets,
-                                      function(target) {
-                                        as.vector(unique(private$.plate.map$Type[
-                                          which(private$.plate.map$Target == target)
-                                          ]))
-                                      })
-                      names(types) <- targets
-                      return(types)
-                    }
-                    private$.plate.map$Type <- as.character(private$.plate.map$Type)
-                    for(target in names(types.names)) {
-                      types <- as.vector(unique(private$.plate.map$Type[
-                        which(private$.plate.map$Target == target)
-                        ]))
-                      for(type.i in 1:length(types)) {
-                        private$.plate.map$Type[which(
-                          private$.plate.map$Target == target & 
-                            private$.plate.map$Type == types[type.i])] <- 
-                          types.names[[target]][type.i]                        
-                      }                      
-                    }
-                    private$.plate.map$Type <- as.factor(private$.plate.map$Type)
-                  },
-                  samples.names = function() {
-                    # not used levels to keap order
-                    as.character(unique(private$.plate.map$TubeName))                    
-                  },
-                  fdata.names = function() {
-                    # not used levels to keap order
-                    as.character(unique(private$.plate.map$FDataName))
-                  },
-                  name.pattern = function(name.pattern) {
-                    if(missing(name.pattern))
-                      return(private$.name.pattern)
-                    private$.name.pattern <- name.pattern
-                    private$.plate.map$FDataName <- 
-                      sapply(1:nrow(private$.plate.map),
-                             function(i) {
-                               GenFDataName(private$.name.pattern,
-                                            private$.plate.map$ReactID[i],
-                                            private$.plate.map$TubeName[i],
-                                            private$.plate.map$Tube[i],
-                                            private$.plate.map$Target[i],
-                                            private$.plate.map$Type[i]
-                               )
-                             }
-                      )
-                  }                  
+                    private$.recalcPositions()
+                  }        
                 )
 )
