@@ -39,6 +39,14 @@ on_failure(is.opt.double) <- function(call, env) {
   paste0(deparse(call$x), " is present but not a double or length > 1")
 }
 
+is.opt.double.matrix <- function(x) {
+  if(is.null(x) || is.na(x)) return(TRUE)
+  is.double(x) && is.matrix(x) 
+}
+on_failure(is.opt.double.matrix) <- function(call, env) {
+  paste0(deparse(call$x), " is present but not a double matrix")
+}
+
 is.opt.integer <- function(x) {
   if(is.null(x) || is.na(x)) return(TRUE)
   is.integer(x) && length(x) == 1  
