@@ -5,50 +5,41 @@
 \alias{RDML}
 \alias{RDML.class}
 \title{R6 class \code{RDML} -- contains methods to read and overview fluorescence
-data from RDML v1.1 format files}
-\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x000000001611ac78> 
+data from RDML v1.1 and v1.2 format files}
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x000000000c192898> 
  - attr(*, "name")= chr "RDML_generator"
 }}
 \usage{
 RDML
 }
 \description{
-Main purpose of this class is to work with RDML format
-data (Lefever et al. 2009) and transform it to the appropriate format
-of the \code{qpcR} (Ritz et al. 2008, Spiess et al. 2008) and \code{chipPCR}
-packages (see \link{new.RDML} for import and \link{RDML.Save} for export details). Real-time PCR Data Markup
-Language (RDML) is the recommended file format element in the Minimum
-Information for Publication of Quantitative Real-Time PCR Experiments (MIQE)
-guidelines (Bustin et al. 2009). After importing Fluorescence data it can be viewed as \code{data.frame} which contains \code{vectors} of
-fluroscence values filtered by experiment method (qPCR or melting), targets
-(genes or dyes names), types (i.e. 'negative', 'unknown'), tube positions on
-plate, samples names or fluorescence data \code{vector} names (see
-\link{GetFData}). Also imported data can be overviewed by \code{summary} and
-\code{plot} \code{S3} functions (see \link{summary.RDML} and
-\link{plot.RDML}).
-}
-\details{
-Names of the fluorescence data \code{vectors} can be generated by rules
-described in \code{name.pattern}. For example, if \code{name.pattern} =
-\code{"\%NAME\%__\%TUBE\%"}, sample name (inputted in the PCR software) is
-"Sample_1", and position on the plate is "A4", then generated fluorescence
-data name will be: "Sample_1__A4".
-
-Possible keys in \code{name.pattern} \describe{ \item{\code{\%NAME\%}}{name
-of the sample inputted in the qPCR software (ex.: "Sample 1")}
-\item{\code{\%ID\%}}{tube ID (ex.: "23")} \item{\code{\%TUBE\%}}{tube name
-(ex.: "B11")} \item{\code{\%TARGET\%}}{PCR target (ex.: "GAPDH")}
-\item{\code{\%TYPE\%}}{type of the sample (ex.: "unkn")}  }
+Main purpose of this class is to work with RDML format data (Lefever et al.
+2009) and transform it to the appropriate format of the \code{qpcR} (Ritz et
+al. 2008, Spiess et al. 2008) and \code{chipPCR} packages (see
+\link{new.RDML} for import and \link{RDML.Save} for export details).
+Real-time PCR Data Markup Language (RDML) is the recommended file format
+element in the Minimum Information for Publication of Quantitative Real-Time
+PCR Experiments (MIQE) guidelines (Bustin et al. 2009). After importing all
+data contained at RDML file can be accessed (getted or setted) by
+\code{fields}. Inner structure of imported data mimics structure of RDML file
+v1.2. Also data can be represented as \code{data.frame} by function
+\code{AsTable}. Such variant of data representation allows easy samples
+filtering (by targets, types, etc.) and serves as request for \code{GetFData}
+function -- gets fluorescence data for specified samples.
 }
 \section{Fields}{
- \describe{ \item{publisher}{name of PCR device manufacturer
-  } \item{dilutions}{\code{list} of dillutions with their positions at plate
-  splitted by targets } \item{plate.dims}{plate dimensions -- number of rows
-  and columns at plate} \item{used.methods}{methods used at experiment --
-  'qPCR' and/or 'melt'} \item{targets}{targets (genes or dyes names) used by
-  experiment} \item{types}{ \code{list} of samples types splitted by targets}
-  \item{name.pattern}{ name pattern to generate fluorescence data vectors
-  names (see 'Details') } }
+ All setters for fields contain data validators (asserts).
+  Thus invalid data can not be setted. Type and structure of data can be
+  viewed at RDML v1.2 file description.
+
+  \describe{ \item{dateMade}{date of
+  experiment } \item{dilutions}{\code{list} of dillutions with their
+  positions at plate splitted by targets } \item{plate.dims}{plate dimensions
+  -- number of rows and columns at plate} \item{used.methods}{methods used at
+  experiment -- 'qPCR' and/or 'melt'} \item{targets}{targets (genes or dyes
+  names) used by experiment} \item{types}{ \code{list} of samples types
+  splitted by targets} \item{name.pattern}{ name pattern to generate
+  fluorescence data vectors names (see 'Details') } }
 }
 
 \section{Methods}{
@@ -56,8 +47,8 @@ of the sample inputted in the qPCR software (ex.: "Sample 1")}
   class object (see \link{RDML.new})} \item{GetFData}{gets fluorescence data
   vectors (see \link{RDML.GetFData})} \item{Plot}{plots \code{RDML} object
   (see \link{RDML.Plot})} \item{Summarize}{creates summary for \code{RDML}
-  object (see \link{RDML.Summarize})} \item{Save}{saves \code{RDML} object as RDML v1.2 format file
-  (see \link{RDML.Save})}}
+  object (see \link{RDML.Summarize})} \item{Save}{saves \code{RDML} object as
+  RDML v1.2 format file (see \link{RDML.Save})}}
 }
 \examples{
 ## EXAMPLE 1:
