@@ -1,3 +1,7 @@
+Changes from Version 0.7-1 to 0.8-1 [January 27 2015]
+* All code rewritten
+* Working functions: AsTable, GetFData
+
 Changes from Version 0.6-1 to 0.7-1 [September 23 2014]
 * Added plot S3
 * RDML rewrited as R6 object
